# argdash

./: README.md  requirements.txt  setup.cfg
.github/workflows/: conda-release.yml
argdash/: Untitled-1  arg_dashboard.py
conda-build/: meta.yaml
docs/: _quarto.yml  objects.txt
docs/pages/: notebook.ipynb  overview.ipynb
test/: test_modulename.py
