[metadata]
name = argdash
version = 1.1.7
author = Your Name
author_email = your@email.com
description= Project description
url = https://github.com/munch-group/argdash
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=file: requirements.txt

[options.packages.find]
exclude =
    test*
    
[options.package_data]
argdash =
    assets/*.css

[options.entry_points]
console_scripts =
    arg-dashboard = argdash.argdash:run
