[metadata]
name = argdash
version = 1.2.1
author = Kasper Munch
author_email = kaspermunch@birc.au.dk
description= ARG dahboard for teaching
url = https://github.com/munch-group/argdash
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=file: requirements.txt

[options.packages.find]
exclude =
    test*
    
[options.package_data]
argdash =
    assets/*.css

# [options.entry_points]
# console_scripts =
#     arg-dashboard = argdash.argdash:run
